# FireSpread

./: .gitignore  CMakeLists.txt  FireSimulation.cpp  FireSimulation.h  FireSimulation_2D.cpp  FireSimulation_2D.h  fire.json  main.cpp
include/: room.hpp  room_graph.hpp
src/: CMakeLists.txt  room.cpp  room_graph.cpp
